--- a/roles/shairport-configure/files/shairport-sync.conf
+++ b/roles/shairport-configure/files/shairport-sync.conf
@@ -1,11 +1,11 @@
 // Sample Configuration File for Shairport Sync on a Raspberry Pi using the built-in audio DAC
 general =
 {
-  volume_range_db = 60; 
+  volume_range_db = 60;
+  name = "Sven";
 };
 
 alsa =
 {
-  output_device = "hw:0";
-  mixer_control_name = "PCM";
+  output_device = "hw:sndrpihifiberry";
 };
